--- a/challenges/easy/1_vector_add/challenge.html
+++ b/challenges/easy/1_vector_add/challenge.html
@@ -1,13 +1,14 @@
 <p>
-  Implement a program that performs element-wise addition of two vectors containing 32-bit floating point numbers on a GPU.
+  Implement a program that performs element-wise addition of two vectors containing 32-bit floating point numbers on a
+  GPU.
   The program should take two input vectors of equal length and produce a single output vector containing their sum.
 </p>
 
 <h2>Implementation Requirements</h2>
 <ul>
   <li>External libraries are not permitted</li>
-    <li>The <code>solve</code> function signature must remain unchanged</li>
-    <li>The final result must be stored in vector <code>C</code></li>
+  <li>The <code>solve</code> function signature must remain unchanged</li>
+  <li>The final result must be stored in vector <code>C</code></li>
 </ul>
 
 <h2>Example 1:</h2>
